# nano-vllm-jax

./: .gitignore  AGENTS.md  BENCHMARK_REPORT.md  INDEX.md  MODEL_IMPLEMENTATION_STATUS.md  MTP_CORRECTNESS_SPEED_LOG.md  MTP_K1_VALIDATION_RESULTS_2026_05_06.md  MTP_MIXED_LENGTH_FUSED_NOTES_2026_05_07.md  PLAN.md  README.md  REPOSITORY_SUMMARY.md  SSH_SETUP.md  TPU_MTP_BENCHMARK_RESULTS.md  benchmark_long_decode_top5.py  benchmark_mtp1_engine.py  benchmark_mtp_v3.py  benchmark_quick_combined.py  benchmark_quick_hf.py  benchmark_real_kv_hf.py  benchmark_server_shapes.py  mtp_correctness_report.md  pyproject.toml  run_tracking.py  runtime_paths.py  server.py  server.yaml  server_config.yaml  serving_workloads_report.json  serving_workloads_report.md
benchmarks/: __init__.py  adapter_flashinfer_gdn_prefill.py  adapter_vllm_fla_gdn_prefill.py  audit_vllm_fla_correctness_boundary.py  audit_vllm_fla_real_activation_contract.py  audit_vllm_fla_real_activation_stages.py  audit_vllm_fla_solve_swap.py  benchmark_gdn_prefill_kernel.py  benchmark_jax_server_multisuite.py  benchmark_jax_server_trace.py  benchmark_random_request_sidecar.py  benchmark_serving_workloads.py  benchmark_vllm_qwen35.py  compare_vllm_sampling_modes.py  microbench_vllm_fla_gdn_prefill.py  microbench_vllm_fla_gdn_real_activation.py  precompute_hf_prompt_reference.py  probe_external_gdn_kernels.py  probe_jax_triton.py  probe_vllm_fla_gdn.py  probe_vllm_like_solve_reference.py  run_gpu_matrix.py  summarize_gpu_matrix.py  summarize_profile_trace.py
docs/: README.md  architecture.md  benchmark_profile_strategy_crosscheck_2026-06-01.md  benchmarks.md  cleanup_audit_resolution.md  current_gpu_baseline.md  gdn_fla_kernel_flow.md  gpu_correctness_guardrails.md  gpu_optimization_next_goal_plan.md  kernel_roadmap.md  kv_cache.md  lm_head_greedy_top1_design_20260601.md  mtp.md  mtp_chain_repair_findings.md  mtp_controlled_experiments_2026-05-11.md  mtp_fused_debug_plan.md  mtp_k1_probe_accounting_2026-05-11.md  mtp_tpu_spot_findings_2026-05-09.md  optimization_logbook.md  reference_mtp.md  rejected_optimization_index.md  roadmap.md  scheduler.md  (+3 more)
(+1064 files in other folders)
