[project]
name = "nano-vllm-jax"
version = "0.1.0"
description = "A pedagogical vLLM implementation in JAX for TPU and GPU"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "flax>=0.8.5",
    "transformers>=4.44.0",
    "safetensors>=0.4.4",
    "numpy>=1.26.4",
    "tqdm>=4.66.4",
    "sentencepiece>=0.2.0",
    "optax>=0.2.2",
    "flask>=2.0.0",
    "xxhash>=3.0.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
cuda13 = [
    "jax-cuda13-plugin[with-cuda]>=0.10.0; python_version >= '3.11'",
    "jax-cuda13-pjrt>=0.10.0; python_version >= '3.11'",
]
hf-parity = [
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanovllm_jax"]
