[project]
name = "nano-vllm-jax"
version = "0.1.0"
description = "A pedagogical JAX/CUDA continuous-batching text generation engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "flax>=0.8.5",
    "transformers>=4.44.0",
    "safetensors>=0.4.4",
    "numpy>=1.26.4",
    "tqdm>=4.66.4",
    "sentencepiece>=0.2.0",
    "optax>=0.2.2",
    "flask>=2.0.0",
    "PyYAML>=6.0.1",
    "xxhash>=3.0.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
cuda13 = [
    "jax-cuda13-plugin[with-cuda]>=0.10.0; python_version >= '3.11'",
    "jax-cuda13-pjrt>=0.10.0; python_version >= '3.11'",
]
hf-parity = [
    "torch>=2.0.0",
]
flashinfer-ffi = [
    "flashinfer-python; python_version >= '3.11'",
    "jax-tvm-ffi; python_version >= '3.11'",
]
gdn-fla-triton = [
    "jax-triton==0.3.1; python_version >= '3.11'",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[tool.ruff.lint]
select = ["F821"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanovllm_jax"]
